# systembolaget-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DISH_PAIRING_DESIGN.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.e2e-ghcr.yaml  docker-compose.e2e.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml  docker.yaml
deploy/s6-rc.d/init-bootstrap/: up
deploy/s6-rc.d/sb-embed/: run
deploy/s6-rc.d/sb-embed-ready/: up
deploy/s6-rc.d/sb-mcp/: run
deploy/s6-rc.d/sb-sync-scheduler/: run
deploy/scripts/: init-bootstrap.sh  wait-for-embed.sh
deploy/truenas/: README.md
docs/: 01_project_overview.md  02_systembolaget_api.md  03_data_schema.md  04_mcp_surface.md  05_sync_pipeline.md  06_module_layout.md  07_deployment.md  08_mcp_implementation.md  09_embedding_service.md  10_sync_orchestration.md  11_observability_and_testing.md  12_packaging.md  README.md
src/sb_stack/: __init__.py  __main__.py  bootstrap.py  errors.py  logging.py  settings.py
src/sb_stack/api_client/: __init__.py  client.py  config_extractor.py  paths.py  rate_limit.py
src/sb_stack/cli/: __init__.py  main.py
src/sb_stack/db/: __init__.py  connection.py  migrations.py
src/sb_stack/db/schema/: 001_initial.sql  002_detail_fetch_timestamp.sql  003_new_api_fields.sql  README.md
src/sb_stack/doctor/: __init__.py  checks.py  runner.py
src/sb_stack/embed/: __init__.py  client.py  hashing.py  templates.py
src/sb_stack/embed_server/: __init__.py  cli.py  loader.py  models.py  server.py
src/sb_stack/mcp_server/: __init__.py  context.py  error_middleware.py  product_rows.py  responses.py  server.py  sugar.py
src/sb_stack/mcp_server/tools/: __init__.py  compare_products.py  find_similar_products.py  get_product.py  get_store_schedule.py  list_home_stores.py  list_taxonomy_values.py  pair_with_dish.py  search_products.py  semantic_search.py  sync_status.py
src/sb_stack/notifications/: __init__.py  ntfy.py
src/sb_stack/pairing/: __init__.py  engine.py  profile.py  scoring.py  voicing.py
src/sb_stack/raw_archive/: __init__.py  reader.py  retention.py  writer.py
src/sb_stack/sync/: __init__.py  cli.py  lockfile.py  orchestrator.py  phase_types.py  product_mapper.py  scheduler.py
src/sb_stack/sync/phases/: __init__.py  details.py  embed.py  fetch.py  finalize.py  index.py  persist.py
tests/: conftest.py
tests/integration/: test_doctor.py  test_embed_server.py  test_finalize_fts.py  test_mcp_tools.py  test_pairing_engine.py  test_phase_d_parallel.py  test_sync_orchestrator.py
tests/unit/: test_alert_manager.py  test_api_client.py  test_api_paths.py  test_changed_products.py  test_cli.py  test_config_extractor.py  test_embed_client.py  test_embed_templates.py  test_error_middleware.py  test_lockfile.py  test_logging.py  test_migrations.py  test_mobile_auth_alert.py  test_pairing_scoring.py  test_product_mapper.py  test_rate_limit.py  test_raw_archive.py  test_schema_initial.py  test_settings.py
