[project]
name            = "sb-stack"
version         = "0.1.0"
description     = "Systembolaget assortment + sommelier-grade dish-pairing MCP server"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Lucas Mårtensson", email = "39569742+LuMa2003@users.noreply.github.com" },
]
dependencies = [
    "duckdb>=1.1",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "apscheduler>=3.10",
    "typer>=0.12",
    "fastmcp>=3.2",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "sentence-transformers>=3.3",
    "torch>=2.5",
    "einops>=0.8",
    "pyyaml>=6.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-vcr>=1.0",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml",
    "pre-commit>=3.8",
    "syrupy>=4.7",
]

[project.scripts]
sb-stack = "sb_stack.cli.main:app"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sb_stack"]

[tool.hatch.build.targets.sdist]
include = ["src/sb_stack", "README.md", "LICENSE"]

# -----------------------------------------------------------------------------
# Ruff — lint + format
# -----------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py312"
src            = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "ARG", "RET", "PL"]
ignore = [
    "PLR0913",  # too many arguments — we have wide input models
    "PLR2004",  # magic numbers are fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py"                 = ["ARG", "PLR"]
# CLI stubs have parameters reserved for later steps — don't flag unused args.
"src/sb_stack/cli/main.py"      = ["ARG001"]

# -----------------------------------------------------------------------------
# Mypy
# -----------------------------------------------------------------------------
[tool.mypy]
strict         = true
python_version = "3.12"
plugins        = ["pydantic.mypy"]
files          = ["src/sb_stack"]

[[tool.mypy.overrides]]
module              = "tests.*"
disallow_untyped_defs = false
check_untyped_defs    = false

[[tool.mypy.overrides]]
# FastMCP's @tool decorator isn't typed yet; silence the "untyped
# decorator makes function untyped" barrage on our tool modules.
module = "sb_stack.mcp_server.tools.*"
disallow_untyped_decorators = false

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode  = "auto"
addopts       = "-ra --strict-markers --tb=short"
testpaths     = ["tests"]
markers = [
    "slow: takes > 1 s",
    "gpu: requires GPU",
    "network: requires live network",
]
